# LangGraph-Practice

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
ChatBot/: README.md  backend.py  chatbot.ipynb  frontend.py  main.py  pyproject.toml  requirements.txt  run_app.py
ConditionalWorkflow/: README.md  main.py  practice.ipynb  practice2.ipynb  pyproject.toml
IterativeWorkflow/: README.md  main.py  practice.ipynb  pyproject.toml
LLMWorkflow/: README.md  main.py  practice.ipynb  pyproject.toml  requirements.txt
ParallelWorkflow/: README.md  main.py  practice.ipynb  practice2.ipynb  pyproject.toml
Persistance/: README.md  main.py  practice.ipynb  pyproject.toml  requirements.txt
PromptChaining/: README.md  main.py  practice.ipynb  pyproject.toml
sequentialWorkflow/: README.md  practice.ipynb  pyproject.toml
